    * a window and a dictionary to manage 1wire based sensors have been added.
    * a window and a dictionary to manage bme280 based sensors have been added.
    * specific threads have been added for testing purpose.
    * options to control data feed for time series and the computation of MSL pressure have been introduced.
    * ephemeride section has been introduced.

  * MODIFIED:
    * mqtt thread has been modified to handle new mqtt based sensors.
    * ds18b20 and bme280 threads has been modified to handle current 1wire based sensors and bme280 sensors.
    * tables are now automatically handled by the weather station.
    * cleaning thread has been modified to handle new tables.
    * option window can handle options to control MSL pressure and sensors for display and time series.
    * thread to display data can handle different tables based on options.
    * GUI is now handling different sensors for in and out.
    * time series section can now handle different sensors for in and out temperature, pressure and humidity.
    * menu icons have been improved.

  * FIXED:
    * few corrections to make the weather station works on raspberry pi.
    * the size of all splitter handlers has been fixed.
    * an issue with a section of the config file has been fixed.
    * fixed an issue with data display.

### March 5 2021, Release version 0.10.1 ###

  * FIXED:
    * fixed an issue with the update system.

  * ADDED:
    * logging messages have been added in the update system.


### March 5 2021, Release version 0.10.0 ###

  * ADDED:
    * OpenWeather has been added as a weather forecast provider.
    * a new version of the option window has been introduced.
    * meteofrance api and openweather api versions have been added to log.

  * MODIFIED:
    * Openweather has been integrated in all widgets.
    * stylesheet has been tweaked in option window.


### March 2 2021, Release version 0.9.3 ###

  * ADDED: